# rpc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
example/chat/: CMakeLists.txt
example/chat/src/: MsgType.h
example/chat/src/server/: CMakeLists.txt  ChatServer.cc  ChatServer.h  ChatService.cc  ChatService.h  main.cc
example/chat/src/server/dbobj/: Group.h  GroupUser.h  User.h
example/chat/src/server/model/: FriendModel.cc  FriendModel.h  GroupModel.cc  GroupModel.h  OfflineMessageModel.cc  OfflineMessageModel.h  UserModel.cc  UserModel.h
example/chat/src/server/mysql/: Connection.cc  Connection.h  ConnectionPool.cc  ConnectionPool.h
example/chat/src/server/redis/: Redis.cc  Redis.h
example/client/: CMakeLists.txt  EchoClient.cc  EchoClient.h  client  main.cc
example/gateway/: CMakeLists.txt  GatewayComponents.h  GatewayServer.cc
example/http/: CMakeLists.txt  HttpContext.cc  HttpResponse.cc  HttpServer  HttpServer.cc  HttpServer.h  RouteTable.cc  RouteTable.h  Router.cc  Router.h  main.cc
example/idleConnection/: CMakeLists.txt  EchoServer  EchoServer.cc  EchoServer.h  main.cc
example/registry/: CMakeLists.txt  RegistryServer.cc  RegistryServer.h  main.cc
example/rpc/: CMakeLists.txt  post.lua
example/rpc/example/: CMakeLists.txt  Hello.pb.cc  Hello.pb.h  user.pb.cc  user.pb.h  user.proto
example/rpc/example/callee/: CMakeLists.txt  HelloServer.cc  server.cc
example/rpc/example/caller/: CMakeLists.txt  StressClient.cc  VerificationClient.cc  client.cc
example/rpc/example/features/: CMakeLists.txt  client.cc  client.conf  echo.proto  run_demo.sh  run_ha.sh  run_lb.sh  run_limit.sh  server.cc  server_8001.conf  server_8002.conf  server_8003.conf  server_9001.conf  server_9002.conf  server_9003.conf  server_9004.conf  server_9005.conf
example/rpc/protos/: Hello.proto  user.proto
example/rpc/src/: ConnectionPool.cc  ConnectionPool.h  LoadBalancer.h  Monitor.h  MonitorAssets.h  MpRpcApplication.cc  MpRpcApplication.h  MpRpcChannel.cc  MpRpcChannel.h  MpRpcController.h  MpRpcProvider.cc  MpRpcProvider.h  MurmurHash3.cc  MurmurHash3.h  RpcHeader.pb.cc  RpcHeader.pb.h  ServiceDiscovery.cc  ServiceDiscovery.h  rpcheader.proto
example/rpc/src/butil/containers/: doubly_buffered_data.h
example/rpc/src/ha/: circuit_breaker.cc  circuit_breaker.h  concurrency_limiter.cc  concurrency_limiter.h  rate_limiter.h
example/rpc/src/http/: HttpContext.cc  HttpContext.h  HttpRequest.cc  HttpRequest.h  HttpResponse.h
example/rpc/src/lb/: consistent_hash_lb.cc  consistent_hash_lb.h  doubly_buffered_data.h  lalb_manager.cc  lalb_manager.h  lalb_weight.cc  lalb_weight.h  lb_common.h  lb_factory.h  load_balancer.h  weighted_round_robin_lb.cc  weighted_round_robin_lb.h
example/rpc/src/metrics/: LatencyRecorder.h  Metrics.cc  Metrics.h  StripedCounter.h  ThreadIndex.cc  ThreadIndex.h  Window.h
example/rpc/src/tracing/: TraceContext.cc  TraceContext.h
example/rpc/tests/: CMakeLists.txt  circuit_breaker_test.cc  consistent_hash_test.cc  lalb_full_test.cc  lalb_test.cc  metrics_test.cc  test_circuit_breaker  test_consistent_hash  test_lalb_full  test_lalb_unit  test_metrics_enhanced  test_metrics_unit  test_metrics_unit.cc  test_tracing  tracing_test.cc
src/base/: CircularBuffer.h  CurrentThread.cc  CurrentThread.h  NonCopy.h  Thread.cc  Thread.h  ThreadPool.cc  ThreadPool.h  TimeStamp.cc  TimeStamp.h
src/logger/: AppendFile.cc  AppendFile.h  AsyncLogging.cc  AsyncLogging.h  FixedBuffer.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h
src/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  Epoller.cc  Epoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Socket.cc  Socket.h  SocketAPI.cc  SocketAPI.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
src/timer/: Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
test/: stress_test.sh  test_ha_integration.py  test_lalb_cluster.py  test_lalb_dynamic.py  test_reliability.py  test_scalability.py  test_tracing.py  utils.py
